# kami-engine

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  bb.edn  wrangler.jsonc
.github/workflows/: ci.yml
90-docs/adr/: 0034-isaac-compat-stack-maturation.md  (+9 more)
kami-app/: Cargo.toml
kami-app-amenominaka/: Cargo.toml  README.md
kami-app-amenominaka/src/: lib.rs
kami-app-bim/: Cargo.toml
kami-app-cad/: Cargo.toml
kami-app-car-sim/: Cargo.toml  README.md
kami-app-giemon/: Cargo.toml
kami-app-isekai/: Cargo.toml
kami-app-live/: Cargo.toml
kami-app-maps3d/: Cargo.toml
kami-app-maps3d/src/: atoms.rs  buildings.rs  gsplat.rs  lib.rs  mesh_tiles.rs  vegetation.rs
kami-app-quarry-walk/: Cargo.toml
kami-app-sip-clj/: .gitignore  README.md  deps.edn  shadow-cljs.edn  wrangler.jsonc
kami-app/src/: camera.rs  depth.rs  input.rs  lib.rs  pipeline.rs  scene.rs
kami-articulated/: Cargo.toml  README.md
kami-articulated/src/: lib.rs  urdf.rs
kami-atmosphere/: Cargo.toml
kami-audio/: Cargo.toml
kami-autodrive/: Cargo.toml  README.md
kami-bim/: Cargo.toml
kami-bim/src/: lib.rs
kami-bridge/: Cargo.toml
kami-bridge/src/: clipboard.rs  lib.rs  macos.rs  windows.rs
kami-cad-import/: Cargo.toml  README.md
kami-cad-import/examples/: gltf_minimal.rs  register_roadster.rs  scad_roadster.rs  synth_sedan.rs
kami-cad-import/src/: demos.rs  ingest.rs  jbeam_emit.rs  lib.rs  part.rs  register.rs  sbom.rs
kami-cad-import/src/demos/: roadster.rs  synth_sedan.rs
kami-cad-import/src/ingest/: gltf.rs  scad.rs  step.rs
kami-cam-scene/: Cargo.toml  README.md
kami-cam-scene/src/: lib.rs
kami-cam-scene/tests/: materials_parity.rs
kami-cartpole-wasm/: Cargo.toml
kami-cartpole-wasm/src/: lib.rs
kami-character/: Cargo.toml
kami-character-scene/: Cargo.toml
kami-clj-host/: Cargo.toml
kami-clj-play/: Cargo.toml
kami-clj-play/games/isekai-network/: README.md  author.clj  deps.edn  logic.clj  scene.edn
kami-clj-play/games/isekai-network/design/: 00-game-bible.edn  01-netsurvivors.edn  02-mieteru-battle.edn  03-futari-dungeon.edn  04-groove-hack.edn  05-tabi-suru-futari.edn
kami-clj-play/games/survivors/: .gitignore
kami-clj-play/src/: main.rs
kami-clj-play3d/: .gitignore  Cargo.toml
kami-clj-play3d/games/dance/: scene.edn
kami-clj-play3d/games/royale/: logic.clj
kami-clj-play3d/src/: main.rs
kami-engine-clj/: Cargo.toml
kami-engine-sdk/: CHARTER-RIDER.md  package.json
kami-genesis/: Cargo.toml  README.md
kami-genesis/src/: articulation3d.rs  batched.rs  cartpole.rs  contact.rs  controllers.rs  double_pendulum.rs  ik.rs  isaac_api.rs  jacobian.rs  lib.rs  lqr.rs  planar_chain.rs  trajectory.rs  vectorized.rs  wgpu_backend.rs  world.rs
kami-genesis/src/wgsl/: cartpole_step.wgsl  double_pendulum_step.wgsl
kami-genesis/tests/: cartpole_step_n_long_trajectory.rs  cartpole_step_n_persistent.rs  dp_step_n_persistent.rs  g5_scorecard.rs  isaac_lab_rl_loop.rs  pose_control.rs  r1_2_scorecard.rs  step_n_scaling_curve.rs  trajectory_tracking.rs
kami-geo/: Cargo.toml
kami-gltf/: Cargo.toml
kami-graph/: Cargo.toml
kami-graph/src/: data.rs  layout.rs  lib.rs
kami-input/: Cargo.toml
kami-ip/: Cargo.toml
kami-ip/src/: bus_protocol.rs  cdc.rs  ip_xact.rs  lib.rs  noc.rs
kami-live/: Cargo.toml  README.md
kami-mangaka-expression-clj/: README.md  bb.edn  deps.edn
kami-mangaka-genko-clj/: README.md  deps.edn
kami-mangaka-reader-clj/: .gitignore
kami-mangaka-scene/: pyproject.toml
kami-mangaka-text-clj/: deps.edn
kami-map/: Cargo.toml
kami-pbrt/: Cargo.toml  README.md
kami-pbrt/src/: lib.rs
kami-physics-solvers/: Cargo.toml  README.md
kami-physics-solvers/src/: lib.rs
kami-render/: Cargo.toml
kami-replicator/: Cargo.toml  README.md
kami-replicator/src/: lib.rs
kami-rt/: Cargo.toml  README.md
kami-rt/src/: bvh.rs  gpu.rs  lib.rs
kami-rtl/: Cargo.toml
kami-rtl/src/: lib.rs
kami-rtx-native/: Cargo.toml  README.md
kami-rtx-native/src/: lib.rs
kami-scad/: Cargo.toml
kami-scad/src/: csg.rs  evaluator.rs  lib.rs  parser.rs
kami-scene-graph/: Cargo.toml
kami-script-runtime/: Cargo.toml
kami-sdf/: Cargo.toml
kami-sensor-sim/: Cargo.toml  README.md
kami-sensor-sim/src/: contact.rs  lib.rs
kami-sensor-sim/tests/: camera_on_genesis.rs  contact_on_genesis.rs  imu_on_genesis.rs  lidar_on_genesis.rs
kami-shugyo/: Cargo.toml  README.md
kami-shugyo/examples/: cartpole_lqr_baseline.rs  cartpole_random.rs  cartpole_vectorized_bench.rs
kami-shugyo/src/: cartpole_env.rs  ee_reach_env.rs  lib.rs  policy.rs  reach_env.rs  scene_cfg.rs  traits.rs  vectorized_env.rs
kami-shugyo/tests/: perception_rl.rs  vec_rl_env.rs
kami-si/: Cargo.toml
kami-si/src/: crosstalk.rs  eye_diagram.rs  lib.rs  s_param.rs  transmission_line.rs
kami-skeleton/: Cargo.toml
kami-skeleton-scene/: Cargo.toml
kami-spice/: Cargo.toml
kami-spice/src/: lib.rs
kami-terrain/: Cargo.toml
kami-text/: Cargo.toml  build.rs
kami-text/src/: lib.rs  macos_emoji_raster.m
kami-tilemap/: Cargo.toml
kami-ui-gpu/: Cargo.toml
kami-ui-sdk/: kami-effect.js  kami-engine-audio.js  kami-motion.js  kami-rtc.js  kami-sound.js  kami-ui.js
kami-usd/: Cargo.toml  README.md
kami-usd-native/: Cargo.toml  README.md
kami-usd-native/src/: lib.rs
kami-usd/src/: lib.rs
kami-vegetation/: Cargo.toml
kami-vegetation/src/: cull.rs  instance.rs  lib.rs  lod.rs  mesh.rs  placement.rs  species.rs  taxonomy.rs
kami-vehicle/: Cargo.toml  README.md
kami-vehicle/examples/: drive_sedan.rs
kami-vehicle/src/: beam.rs  builder.rs  controls.rs  ground.rs  implicit.rs  integrator.rs  jbeam.rs  lib.rs  node.rs  powertrain.rs  rigid_chassis.rs  triangle.rs  vehicle.rs  wheel.rs
kami-vehicle/src/models/: garage.rs  mod.rs  sedan.rs
kami-verify/: Cargo.toml
kami-voxel/: Cargo.toml
kami-vrm/: Cargo.toml
kami-web/: Cargo.toml  graph.html  haisen.json  index.html  play.html
kami-webgpu-rs/: .gitignore  Cargo.toml
kami-yield/: Cargo.toml
scripts/: test-bb-pipeline.sh  test-script-backends.sh  wit_test.clj
wit/: kami-interface.edn
(+234 files in other folders)
