[package]
name = "kami-app-amenominaka"
description = "amenominaka (天之御中) — Omniverse Kit-equivalent app shell + extension loader for KAMI engine. R1.0 path reservation per ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
