[package]
name = "kami-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kami-core = { path = "../kami-core" }
kami-render = { path = "../kami-render", features = ["wgpu-backend"] }
hecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
wgpu = "24"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Window", "HtmlCanvasElement", "console",
    "Performance", "KeyboardEvent", "EventTarget", "Element",
    "MouseEvent", "WheelEvent", "HtmlElement", "DomRect",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
