[package]
name = "kami-articulated"
description = "URDF / MJCF / USD physics loader -> kami-genesis articulation. R1.1 PoC: minimum URDF parser supporting prismatic + revolute joints with mass / inertia / axis. Pure Rust + roxmltree (WASM-friendly). ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
roxmltree = { workspace = true }
