[package]
name = "kami-bim"
description = "KAMI BIM kernel — IFC-like building model (project/site/building/storey/space/element), property sets, BREP bridge to kami-cad, tessellation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
kami-eng-core = { path = "../kami-eng-core" }
kami-cad = { path = "../kami-cad" }
kami-mesher = { path = "../kami-mesher" }
kami-gltf = { path = "../kami-gltf" }
