[package]
name = "kami-bridge"
version.workspace = true
edition.workspace = true
description = "OS-level input capture/injection bridge (macOS CGEvent, Windows Win32)"

[dependencies]
kami-input = { path = "../kami-input" }
log.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Globalization",
] }
