[package]
name = "kami-cad-import"
description = "CAD → vehicle part graph → JBeam topology + CycloneDX SBOM. Bridges kami-cad/kami-scad to kami-vehicle and sbom.etzhayyim.com for driver.etzhayyim.com BeamNG-grade vehicles (ADR 2605051430)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
kami-cad = { path = "../kami-cad" }

[dev-dependencies]
serde_json = { workspace = true }
kami-vehicle = { path = "../kami-vehicle" }
