[package]
name = "kami-cam-scene"
version.workspace = true
edition.workspace = true
license.workspace = true

# kami-cam-scene — data-tier authoring surface for kami-cam STOCK MATERIAL presets.
#
# ADR-0046 / ADR-0038: a thing that *describes* is EDN; a thing that *computes per
# element* stays native Rust. The five `CamMaterial::{aluminum_6061, steel_1045,
# titanium_ti6al4v, abs_plastic, wood_oak}()` builders are init-time CONFIG (a feed/
# speed lookup seeded once), so they move to canonical EDN here. The hardcoded
# builders stay in kami-cam as the `builtin_material()` fallback AND the parity oracle
# — every shipped EDN value is asserted `==` the real Rust (tests/materials_parity.rs).
#
# kami-cam stays edn-free; the kami-scene (EDN) dependency lives only here. Additive:
# one new crate + one [workspace] members line, no change to kami-cam.

[dependencies]
# The engine struct we build (CamMaterial). Path dep, no new feature on kami-cam.
kami-cam = { path = "../kami-cam" }
# Tolerant EDN accessors (the same scene.edn rule set games use): missing key →
# default, hyphen-keyword ids (:aluminum-6061), int↔float coercion.
kami-scene = { path = "../kami-scene" }
thiserror = { workspace = true }
