[package]
name = "kami-cartpole-wasm"
description = "kami-shugyo Cartpole as a wasm-bindgen cdylib — proves Phase C of ADR-2605261800 (cargo build --target wasm32-unknown-unknown end-to-end with JS-callable exports). Demonstrates Genesis/Isaac Sim API working on WebGPU+WASM."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
serde_json = { workspace = true }
kami-shugyo = { path = "../kami-shugyo" }
kami-articulated = { path = "../kami-articulated" }
kami-genesis = { path = "../kami-genesis" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
