[package]
name = "kami-clj-play3d"
version.workspace = true
edition.workspace = true
description = "kami-clj-play3d — native 3rd-person 3D player (winit + wgpu/Metal) for kami-clj/EDN games. The GPU arm; the game (logic.clj + scene.edn) is data. A stylized battle-royale demo."

[[bin]]
name = "kami-clj-play3d"
path = "src/main.rs"

[dependencies]
kami-script-runtime = { path = "../kami-script-runtime", default-features = false }
kami-core  = { path = "../kami-core" }
kotoba-edn = { path = "../../kotoba/crates/kotoba-edn" }
kami-scene = { path = "../kami-scene" }
# Data-driven renderer (same EDN render-IR the web runs). Adopted incrementally — see
# ADR-0041; the kami-webgpu-rs winit `live` example is the reference integration.
kami-webgpu-rs = { path = "../kami-webgpu-rs" }
hecs       = { workspace = true }
glam       = { workspace = true }
wgpu       = "24"
winit      = "0.30"
pollster   = "0.4"
bytemuck   = { workspace = true }
gilrs      = "0.11"
rodio      = "0.20"
image      = { version = "0.25", default-features = false, features = ["png"] }

[features]
default          = ["backend-wasmtime"]
backend-wasmtime = ["kami-script-runtime/backend-wasmtime"]
backend-wasmi    = ["kami-script-runtime/backend-wasmi"]
