[package]
name = "kami-genesis"
description = "Genesis-compat physics backend for KAMI / e7m-sim. R1.1 PoC: closed-form Cartpole dynamics (semi-implicit Euler). isaacsim.core.api articulation API-compat target. Full Genesis Taichi->wgpu bind deferred to R1.x. PhysX 5 API parity (PxScene/PxRigidDynamic/PxArticulationReducedCoordinate) via §D11. ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
kami-articulated = { path = "../kami-articulated" }
