[package]
name = "kami-genesis"
description = "Genesis-compat physics backend for KAMI / e7m-sim. R1.1 PoC: closed-form Cartpole dynamics (semi-implicit Euler). isaacsim.core.api articulation API-compat target. Full Genesis Taichi->wgpu bind deferred to R1.x. PhysX 5 API parity (PxScene/PxRigidDynamic/PxArticulationReducedCoordinate) via §D11. ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
kami-articulated = { path = "../kami-articulated" }

# Optional WebGPU compute backend (gated; opt in with --features gpu).
# Brings cartpole_step.wgsl to a real wgpu::ComputePipeline. Works on
# Metal / Vulkan / DX12 / WebGPU per wgpu's universal backend strategy.
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { workspace = true, optional = true }
