[package]
name = "kami-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Force-directed graph layout + wgpu rendering for system visualization"

[dependencies]
glam.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
