[package]
name = "kami-ip"
description = "KAMI IP Management — IP-XACT component catalog, bus protocol generation, NoC topology synthesis, and CDC analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
