[package]
name = "kami-pbrt"
description = "kami-rtx — Mitsuba 3 WASM bind (upstream-only, no fork). RTX Renderer API-compat target. R1.0 path reservation per ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
