[package]
name = "kami-physics-solvers"
description = "From-scratch WGSL compute 5-solver physics engine (rigid Featherstone+XPBD / MPM / SPH / FEM / PBD). Contingent fallback per ADR-2605261800 §D10.4, triggered if Genesis WebGPU backend fails R1.1 or R1.8 viability gate. PhysX API surface mirror target per §D11.2 step 3."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
