[package]
name = "kami-replicator"
description = "utsushimi (写身) — synthetic data generation + domain randomization. omni.replicator.core API-compat target. R1.0 path reservation per ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
