[package]
name = "kami-rt"
description = "hikari-rt (光) — WebGPU hardware ray tracing primitive (ray-query + WGSL LBVH compute). R1.0 path reservation per ADR-2605261800. OptiX API-compat target."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
