[package]
name = "kami-rtl"
description = "KAMI RTL — HDL editor (Verilog/VHDL parsing), event-driven simulation, waveform viewer, synthesis netlist"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
kami-eng-core = { path = "../kami-eng-core" }
kami-eng-render = { path = "../kami-eng-render" }
