[package]
name = "kami-rtx-native"
description = "From-scratch WGSL path tracer + differentiable rendering. Contingent fallback per ADR-2605261800 §D10.4, triggered if Mitsuba 3 WebGPU upstream PR fails R1.2 viability gate."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
