[package]
name = "kami-scad"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenSCAD subset parser + CSG mesh evaluator for KAMI Engine"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kami-render = { path = "../kami-render", default-features = false }
kami-voxel = { path = "../kami-voxel" }
kami-sdf = { path = "../kami-sdf" }
kami-mesher = { path = "../kami-mesher" }
kami-gltf = { path = "../kami-gltf" }
