[package]
name = "kami-sensor-sim"
description = "Camera / lidar / IMU / contact sensor synth, isaacsim.sensors API-compat target. Implemented: pinhole Camera (intrinsics/extrinsics/projection/depth), analytic Lidar (VLP-16 / 16-64-beam / solid-state), body-frame IMU (proper accel + gyro, reads kami-genesis link state), ContactSensor (sample + sample_all multi-contact). All four sensors have end-to-end integration tests reading kami-genesis link state on a robot. WebGPU-compute acceleration is the remaining R1.6 work for wadachi-sim DriveSim parity. ADR-2605261800 / ADR-0034."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Dev-only: the IMU↔physics integration test reads link kinematics from a
# kami-genesis articulation. No production coupling — sensor-sim stays
# physics-engine-agnostic (sensors take raw world-frame state as input).
[dev-dependencies]
kami-genesis = { path = "../kami-genesis" }
kami-articulated = { path = "../kami-articulated" }
