[package]
name = "kami-shugyo"
description = "e7m-shugyo (修行) — Isaac Lab-equivalent RL training framework. ManagerBasedRLEnv API-compat target. R1.0 path reservation per ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
