[package]
name = "kami-shugyo"
description = "e7m-shugyo (修行) — Isaac Lab-equivalent RL training framework. ManagerBasedRLEnv API-compat target. Vectorized gym envs over kami-genesis: CartpoleEnv, a joint-space VectorizedReachEnv, and an end-effector Cartesian VectorizedEeReachEnv (any URDF arm) wrapping ArticulationBatch with a computed-torque actuator. Unified VecRLEnv trait; normalized actions + operational-space (tool-point / pose) IK control; gradient-free training (LinearPolicy + ARS-lite random search); sim-to-real domain randomization (per-env gravity + mass physics DR, action + observation noise, all seeded); sensor-in-the-loop touch-reach (kami-sensor-sim ContactSensor → obs + reward). ADR-2605261800 / ADR-0034."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
glam = { workspace = true }
kami-articulated = { path = "../kami-articulated" }
kami-genesis = { path = "../kami-genesis" }
# Sensor synthesis — the EE-reach env can put a ContactSensor in the loop
# (touch-reach observation + reward). Acyclic: sensor-sim has no kami deps.
kami-sensor-sim = { path = "../kami-sensor-sim" }
