[package]
name = "kami-si"
description = "KAMI Signal Integrity — transmission line analysis, eye diagram generation, crosstalk analysis, and S-parameter extraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
