[package]
name = "kami-spice"
description = "KAMI SPICE — circuit simulation engine (MNA DC/AC/transient analysis, MOSFET/BJT/diode models, SPICE netlist parser)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
