[package]
name = "kami-text"
version.workspace = true
edition.workspace = true
description = "SDF text rendering for wgpu"
[dependencies]
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
ab_glyph = "0.2"
unicode-segmentation = "1"
rustybuzz = "0.18"
unicode-bidi = "0.3"

[build-dependencies]
cc = "1"
