[package]
name = "kami-usd-native"
description = "From-scratch Rust USD parser (Crate / ascii / binary) + composition engine. Contingent fallback per ADR-2605261800 §D10.4, triggered if tinyusdz WASM fails R1.1 viability gate."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
