[package]
name = "kami-usd"
description = "OpenUSD WASM (tinyusdz bind) + Hydra render delegate → KAMI scene graph. omni.usd API-compat target. R1.0 path reservation per ADR-2605261800."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
