[package]
name = "kami-vegetation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decima-style procedural vegetation: grass, ferns, trees, palms with GPU-instanced wind animation"

[dependencies]
glam.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde_json = { workspace = true }
kami-terrain = { path = "../kami-terrain" }
